decompose workflows in DAGs

--- a/app/templates/app/right_panel.html
+++ b/app/templates/app/right_panel.html
@@ -511,7 +511,8 @@
                     <!-- Download Dropdown -->
                     <ul id='downloadDropdownWorkflow' class='dropdown-content'>
                         <li><a ng-click="workflow_info_download_pressed('BASH')">BASH executable</a></li>
-                        <li><a ng-click="workflow_info_download_pressed('JSON')">JSON</a></li>
+                        <li><a ng-click="workflow_info_download_pressed('JSONGRAPH')">JSON Graph</a></li>
+                        <li><a ng-click="workflow_info_download_pressed('JSONDAG')">JSON DAG</a></li>
                         <li><a ng-click="workflow_info_download_pressed('CWLTARGZ')">CWL tar.gz</a></li>
                         <li><a ng-click="workflow_info_download_pressed('CWLZIP')">CWL zip</a></li>
                         <li><a ng-click="workflow_info_download_pressed('AIRFLOW')">Airflow</a></li>
