--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -101,6 +101,12 @@
 	<!-- https://angular-ui.github.io/ui-select/ -->
 	<script src='/static/app/node_modules/ui-select/dist/select.min.js'></script>
 
+	<!-- <script src='/static/app/angular-upload.min.js'></script> -->
+	<!-- https://github.com/leon/angular-upload -->
+	<script src='/static/app/angular-upload.js'></script>
+
+
+
 
 	<!--
 	<script src="/static/app/angular.1.3.2/angular.min.js"></script>
