--- a/app/templates/app/left_panel.html
+++ b/app/templates/app/left_panel.html
@@ -209,12 +209,22 @@
                         ng-show="!workflows_info_editable" 
                         ng-click="workflows_plus_button_clicked(true)">
                         <i class="material-icons plusIcon">add</i></a>
-                    
-                    <a id="workflowsUploadBtn" class="waves-effect btn green plusBtn right tooltipped"
-                        data-position="left" data-tooltip="Upload Workflow" 
+                                
+                    <div
+                        class="waves-effect btn green plusBtn right tooltipped inputWrapper"
+                        data-position="left" data-tooltip="Upload Workflow"   
                         ng-show="!workflows_info_editable" 
-                        ng-click="workflows_upload_button_clicked()">
-                        <i class="material-icons plusIcon">arrow_upward</i></a>
+                        upload-button
+                        url="/platform/upload/"
+                        on-success="workflows_upload_button_on_success(response)"
+                        ><i class="material-icons plusIcon">arrow_upward</i></a>
+                    </div>
+
+<!--
+                            data="formData"
+                        on-upload="onUpload(files)" 
+
+-->
 
                     <a id="workflowsUnsavedBtn"
                         ng-show="workflows_info_editable"
