--- a/app/static/app/konstantina/css/style.css
+++ b/app/static/app/konstantina/css/style.css
@@ -379,6 +379,37 @@ nav {
     padding-top: 5px;
 }
 
+
+/*
+Hide File upload input
+https://stackoverflow.com/questions/1084925/input-type-file-show-only-button/7691323#7691323
+http://jsfiddle.net/VQJ9V/307/
+*/
+.inputWrapper {
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    /*Using a background color, but you can use a background image to represent a button*/
+    background-color: #DDF;
+}
+
+.fileInput {
+    cursor: pointer;
+    height: 100%;
+    position:absolute;
+    top: 0;
+    right: 0;
+    /*This makes the button huge so that it can be clicked on*/
+    font-size:50px;
+}
+.hidden {
+    /*Opacity settings for all browsers*/
+    opacity: 0;
+    -moz-opacity: 0;
+    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0)
+}
+
+
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
 /* ------------------------------------------------------------------------ Pushpin with Scrollspy ------------------------------------------------------------------------------ */
