--- a/app/templates/app/right_panel.html
+++ b/app/templates/app/right_panel.html
@@ -894,8 +894,8 @@
                 {% verbatim %}
                 <a class="waves-effect btn-flat right reportUrl btn-small" ng-show="(report_client_status == 'SUCCESS' || report_client_status == 'FAILED') && report_log_url" ng-href="{{report_log_url}}">Logs</a>
                 <a class="waves-effect btn-flat right reportUrl btn-small" ng-show="(report_client_status == 'SUCCESS' || report_client_status == 'FAILED') && report_url" ng-href="{{report_url}}">Report</a>
-                <a class="waves-effect btn-flat right reportUrl btn-small" ng-show="report_monitor_url" ng-href="{{report_monitor_url}}" target="_blank">Monitor Resources</a>
-                <a class="waves-effect btn-flat right reportUrl btn-small" ng-show="report_visualization_url" ng-href="{{report_visualization_url}}" target="_blank">Monitor Execution</a>
+                <a class="waves-effect btn-flat right reportUrl btn-small" ng-disabled="!report_monitor_url" ng-href="{{report_monitor_url}}" target="_blank">Monitor Resources</a>
+                <a class="waves-effect btn-flat right reportUrl btn-small" ng-disabled="!report_visualization_url" ng-href="{{report_visualization_url}}" target="_blank">Monitor Execution</a>
                 {% endverbatim %}
             </div>
             <!--
