changes for statistics

--- a/app/static/app/konstantina/css/style.css
+++ b/app/static/app/konstantina/css/style.css
@@ -730,3 +730,21 @@ http://jsfiddle.net/VQJ9V/307/
 .cursorPointer {
     cursor: pointer;
 }
+
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
+/* ------------------------------------------------------------------------------- Statistics ----------------------------------------------------------------------------------- */
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+.statisticsCard {
+    padding: 10px; 
+    position: relative; 
+    box-shadow: none; 
+    border: 1px solid #DDD; 
+    border-radius: 4px;
+}
+
+
+
+
