setup stats env

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -213,7 +213,7 @@
 	    <link rel="stylesheet" href="/static/app/node_modules/chart.js/dist/Chart.min.css">
 		<!-- Chart JS -->
 	  <script src="/static/app/node_modules/chart.js/dist/Chart.min.js"></script>
-		<script src="/static/app/node_modules/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.js"></script>
+		<script src="/static/app/node_modules/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 	  <!-- statistics custom JS -->
 	  <script src="/static/app/statistics/js/statistics.js"></script>
 	  <!-- END OF STATISTICS-->
